--- a/expensetracker.html
+++ b/expensetracker.html
@@ -37,6 +37,20 @@
                     </li> --> 
                 </ul>
             </div>
+            <div class="balance-wrapper">
+                <div class="totalIncome">
+                    <h3>Income</h3>
+                    <p id="showIncome"></p>
+                </div>
+                <div class="totalExpenses">
+                    <h3>Expenses</h3>
+                    <p id="showExpenses"></p>
+                </div>
+                <div class="totalBalance">
+                    <h3>Balance</h3>
+                    <p id="showBalance"></p>
+                </div>
+            </div>
         </div>
      
      <script src="resources/index.js"></script>
