--- a/expensetracker.html
+++ b/expensetracker.html
@@ -16,15 +16,15 @@
             <h2 class="text-success text-center">Add an item here</h2>
             <form>
                 <div class="row">
-                    <label class="col-md-4" for="income">Income:</label>
-                    <input class="col-md-4 " type="text" id="income" name="incomeAdded" placeholder="0 RON">
+                    <label class="col-md-3 offset-md-3" for="income">Income:</label>
+                    <input class="col-md-3" type="text" id="income" name="incomeAdded" placeholder="0 RON">
                     <button id="addIncome" type="button" class="col-md-4 offset-md-4">Add Income</button>
-                    <label class="col-md-4" for="expense">Name:</label>
-                    <input class="col-md-8" id="expense" name="itemAdded" type="text" placeholder="Where was the expense made?">
-                    <label class="col-md-1" for="date">Date:</label>
-                    <input class="col-md-5" name="itemAdded" type="date" id="date">
-                    <label class="col-md-1" for="amount">Amount:</label>
-                    <input class="col-md-5" name="itemAdded" type="text" id="amount" placeholder="0 RON">
+                    <label class="col-md-3 offset-md-3" for="expense">Name:</label>
+                    <input class="col-md-3" id="expense" name="itemAdded" type="text" placeholder="Where was the expense made?">
+                    <label class="col-md-3 offset-md-3" for="date">Date:</label>
+                    <input class="col-md-3" name="itemAdded" type="date" id="date">
+                    <label class="col-md-3 offset-md-3" for="amount">Amount:</label>
+                    <input class="col-md-3" name="itemAdded" type="text" id="amount" placeholder="0 RON">
                     <button id="addButton" type="button" class="col-md-4 offset-md-4">Add Expense</button>
                 </div>
             </form>
